a lot of small tweaks

--- a/locales/en.arb
+++ b/locales/en.arb
@@ -5,7 +5,7 @@
   "homeSelectText": "Text",
   "homeSelectGallery": "Gallery",
   "homeSelectTextTypeSomeText": "Type some text",
-  "homeLatest": "Latest",
+  "homeHistory": "History",
   "homeReceiver": "Receiver",
   "homeUpdates": "Updates",
   "homeUpdatesTheLatestVersionIsInstalled": "The latest version is already installed",
@@ -31,6 +31,16 @@
   "intro4EverywhereDescription": "Sharik is available for all major mobile and desktop platforms. Also, it is free, it has no ads, and its code is published online.\nClick here to learn more",
 
   "@_ABOUT_PAGE": {},
+  "aboutInstalledVersion": "Installed version",
+  "aboutLatestVersion": "The latest version",
+  "aboutLatestVersionUnknown": "unknown",
+  "aboutCheckForUpdates": "Check for updates",
+  "aboutUpdate": "Update",
+  "aboutNoUpdates": "No updates",
+  "aboutOpenSourceLicenses": "Open source licenses",
+  "aboutTrackingPolicy": "Tracking policy",
+  "aboutContributors": "Contributors",
+  "aboutSharikText": "Sharik is completely free with its code published on GitHub.\nEveryone is welcomed to contribute :>",
   "aboutChangelog": "Changelog",
   "aboutLicenses": "Licenses",
 
