updated privacy policy & tracking policy

--- a/locales/en.arb
+++ b/locales/en.arb
@@ -19,7 +19,7 @@
   "introGeneralNext": "NEXT",
   "generalClose": "Close",
   "generalSend": "Send",
-  "generalOpenInGithub": "Open in GitHub",
+  "generalOpenInGithub": "Open on GitHub",
   "generalLoading": "Loading",
 
   "@_INTRO_PAGE": {},
