--- a/locales/pt_br.arb
+++ b/locales/pt_br.arb
@@ -1,6 +1,62 @@
 {
   "@@locale": "br",
-  "homeSelectFile": "Select file",
+  "homeSelectFile": "Selecione um arquivo",
+  "homeSelectApp": "App",
+  "homeSelectText": "Texto",
+  "homeSelectGallery": "Galeria",
+  "homeSelectTextTypeSomeText": "Digite algum texto",
+  "homeHistory": "Histórico",
+  "homeReceiver": "Destinatário",
+  "homeUpdates": "Atualizações",
+  "homeUpdatesTheLatestVersionIsInstalled": "Você tem a versão mais recente",
+  "homeUpdatesCurrentVersion": "Versão atual",
+  "homeUpdatesLatestVersion": "Versão mais recente",
+  "homeUpdatesChangelog": "Histórico de modificações",
+  "selectAppSearch": "Procura",
+  "selectAppHideSystem": "Ocultar apps do sistema",
+  "selectAppHideNonLaunch": "Ocultar apps não-executáveis",
+  "introGeneralDone": "CONCLUÍDO",
+  "introGeneralNext": "PRÓXIMO",
+  "generalClose": "Fechar",
+  "generalSend": "Enviar",
+  "generalOpenInGithub": "Abrir no GitHub",
+  "generalLoading": "Carregando",
+
+  "@_INTRO_PAGE": {},
+  "intro1ConnectTitle": "CONNECTAR",
+  "intro1ConnectDescription": "Conecte os dispositivos à mesma rede. Também pode usar um Hotspot",
+  "intro2SendTitle": "ENVIAR",
+  "intro2SendDescription": "Pode compartilhar imagens, vídeos, arquivos e textos",
+  "intro3ReceiveTitle": "RECEBER",
+  "intro3ReceiveDescription": "Abra o link no outro dispositivo via qualquer navegador. Se você tiver o Sharik em ambos dispositivos pode usar a função de destinatário",
+  "intro4EverywhereTitle": "EM QUALQUER LUGAR",
+  "intro4EverywhereDescription": "Sharik está disponível em todas as plataformas principais. Além disso é gratuito, não contém anúncios e seu código é publicado online.\nClique aqui para saber mais",
+
+  "@_ABOUT_PAGE": {},
+  "aboutInstalledVersion": "Versão instalada",
+  "aboutLatestVersion": "A última versão",
+  "aboutLatestVersionUnknown": "indeterminado",
+  "aboutCheckForUpdates": "Verificar por atualizações",
+  "aboutUpdate": "Atualização",
+  "aboutNoUpdates": "Nenhuma atualização",
+  "aboutOpenSourceLicenses": "Licenças de software livre",
+  "aboutTrackingPolicy": "Política de rastreamento",
+  "aboutContributors": "Colaboradores",
+  "aboutSharikText": "Sharik é totalmente livre e seu código é publicado no GitHub.\nTodos são bem-vindos para contribuir :>",
+  "aboutChangelog": "Histórico de modificações",
+  "aboutLicenses": "Licenças",
+  "aboutPrivacyPolicy": "Política de privacidade",
+
+
+  "@_SHARING_PAGE": {},
+  "sharingReceiver": "Destinatário",
+  "sharingNetworkInterfaces": "Interfaces da rede",
+  "sharingSelectNetworkInterface": "Selecione a interface da rede",
+  "sharingCopiedToClipboard": "Copiado ao Clipboard",
+  "sharingRecipientNeedsToBeConnected": "O destinatário precisa estar conectado\nà mesma rede",
+  "sharingOpenInBrowser": "Agora abra este link\nem qualquer navegador",
+  "sharingConnectToWiFiOrHotspot": "Conecte-se a Wi-Fi ou crie um Hotspot",
+
 
   "fontAndika": "Andika",
   "fontComfortaa": "Comfortaa"
