--- a/locales/fa.arb
+++ b/locales/fa.arb
@@ -1,7 +1,57 @@
 {
   "@@locale": "fa",
-  "homeSelectFile": "Select file",
-
+  "homeSelectFile": "انتخاب فایل",
+  "homeSelectApp": "برنامه",
+  "homeSelectText": "متن",
+  "homeSelectGallery": "گالری",
+  "homeSelectTextTypeSomeText": "متن خود را بنویسید",
+  "homeHistory": "تاریخچه",
+  "homeReceiver": "دریافت کننده",
+  "homeUpdates": "بروزرسانی ها",
+  "homeUpdatesTheLatestVersionIsInstalled": "جدیدترین نسخه نصب شده است",
+  "homeUpdatesCurrentVersion": "نسخه فعلی",
+  "homeUpdatesLatestVersion": "آخرین نسخه",
+  "homeUpdatesChangelog": "لیست تغییرات",
+  "selectAppSearch": "جستجو",
+  "selectAppHideSystem": "پنهان کردن برنامه‌های سیستم",
+  "selectAppHideNonLaunch": "پنهان کردن برنامه های غیر اجرایی",
+  "introGeneralDone": "انجام شد",
+  "introGeneralNext": "بعدی",
+  "generalClose": "بستن",
+  "generalSend": "ارسال",
+  "generalOpenInGithub": "باز کردن در گیت هاب",
+  "generalLoading": "درحال بارگذاری",
+  "@_INTRO_PAGE": {},
+  "intro1ConnectTitle": "اتصال",
+  "intro1ConnectDescription": "دستگاه ها را به یک شبکه وای فای متصل کنید. همچنین میتوانید از هات اسپات موبایل استفاده کنید",
+  "intro2SendTitle": "ارسال",
+  "intro2SendDescription": "شما میتوانید تصاویر، فیلم ها، فایل ها و متن را به اشتراک بگذارید",
+  "intro3ReceiveTitle": "دریافت",
+  "intro3ReceiveDescription": "لینک را در یک مرورگر دلخواه در دستگاه دیگر باز کنید. اگر شریک روی هر دو دستگاه نصب باشد میتوانید از قابلیت دریافت کننده استفاده کنید",
+  "intro4EverywhereTitle": "همه جا",
+  "intro4EverywhereDescription": "شریک برای همه پلتفرم های اصلی موبایل و دسکتاپ موجود است. همچنین رایگان، بدون تبلیغات و کد آن منتشر شده است.\nبرای اطلاعات بیشتر اینجا کلیک کنید",
+  "@_ABOUT_PAGE": {},
+  "aboutInstalledVersion": "نسخه نصب شده",
+  "aboutLatestVersion": "آخرین نسخه",
+  "aboutLatestVersionUnknown": "نامشخص",
+  "aboutCheckForUpdates": "بررسی بروزرسانی",
+  "aboutUpdate": "بروزرسانی",
+  "aboutNoUpdates": "نسخه جدید موجود نیست",
+  "aboutOpenSourceLicenses": "مجوزهای متن باز",
+  "aboutTrackingPolicy": "سیاست جمع آوری اطلاعات",
+  "aboutContributors": "مشارکت کنندگان",
+  "aboutSharikText": "شریک کاملا رایگان و کد آن بر روی گیت هاب منتشر شده است.\nهمه میتوانند در این پروژه مشارکت کنند :>",
+  "aboutChangelog": "لیست تغییرات",
+  "aboutLicenses": "Tajawal",
+  "aboutPrivacyPolicy": "سیاست حفظ حریم خصوصی",
+  "@_SHARING_PAGE": {},
+  "sharingReceiver": "گیرنده",
+  "sharingNetworkInterfaces": "رابط های شبکه",
+  "sharingSelectNetworkInterface": "رابط شبکه را انتخاب کنید",
+  "sharingCopiedToClipboard": "در حافظه کپی شد",
+  "sharingRecipientNeedsToBeConnected": "دریافت کننده باید به شبکه یکسان\nمتصل باشد",
+  "sharingOpenInBrowser": "اکنون این لینک را\nدر یک مرورگر باز کنید",
+  "sharingConnectToWiFiOrHotspot": "به وای فای متصل شوید و یا یک هات اسپات راه اندازی کنید",
   "fontAndika": "Tajawal",
-  "fontComfortaa": "Changa"
+  "fontComfortaa": "Almarai"
 }
