--- a/locales/ml.arb
+++ b/locales/ml.arb
@@ -1,7 +1,57 @@
 {
   "@@locale": "ml",
-  "homeSelectFile": "Select file",
-
+  "homeSelectFile": "ഫയൽ തിരഞ്ഞെടുക്കുക",
+  "homeSelectApp": "ആപ്പ്",
+  "homeSelectText": "എഴുത്ത്",
+  "homeSelectGallery": "ഗാലറി",
+  "homeSelectTextTypeSomeText": "എന്തെങ്കിലും ടൈപ്പ് ചെയ്യുക",
+  "homeHistory": "ചരിത്രം",
+  "homeReceiver": "സ്വീകർത്താവ്",
+  "homeUpdates": "അപ്ഡേറ്റുകൾ",
+  "homeUpdatesTheLatestVersionIsInstalled": "ഈ ആപ്പിന്റെ പുതിയ പതിപ്പ് ഇതിനകം തന്നെ ഇൻസ്റ്റാൾ ചെയ്‌തിട്ടുണ്ട്",
+  "homeUpdatesCurrentVersion": "നിലവിലെ പതിപ്പ്",
+  "homeUpdatesLatestVersion": "പുതിയ പതിപ്പ്",
+  "homeUpdatesChangelog": "മാറ്റങ്ങൾ",
+  "selectAppSearch": "തിരയുക",
+  "selectAppHideSystem": "സിസ്റ്റം ആപ്പുകള്‍ മറയ്ക്കുക",
+  "selectAppHideNonLaunch": "ലോഞ്ച് ചെയ്യാൻ പറ്റാത്ത ആപ്പുകൾ മറയ്ക്കുക",
+  "introGeneralDone": "പൂർത്തിയാക്കി",
+  "introGeneralNext": "അടുത്തത്",
+  "generalClose": "അടയ്‌ക്കുക",
+  "generalSend": "അയക്കുക",
+  "generalOpenInGithub": "ഗിറ്റ്ഹബ്ബിൽ തുറക്കുക",
+  "generalLoading": "ലോഡ് ചെയ്യുന്നു",
+  "@_INTRO_PAGE": {},
+  "intro1ConnectTitle": "ബന്ധിപ്പിക്കുക",
+  "intro1ConnectDescription": "ഡിവൈസുകൾ ഒരേ വൈ-ഫൈ ശൃംഖലയിലേക്ക് ബന്ധിപ്പിക്കുക. നിങ്ങൾക്ക് മൊബൈൽ ഹോട്സ്പോട്ടും ഉപയോഗിക്കാം",
+  "intro2SendTitle": "അയക്കുക",
+  "intro2SendDescription": "നിങ്ങൾക്ക് ചിത്രങ്ങളും, വീഡിയോകളും, ഫയലുകളും, എഴുത്തുകളും അയക്കാം",
+  "intro3ReceiveTitle": "സ്വീകരിക്കുക",
+  "intro3ReceiveDescription": "മറ്റൊരു ഡിവൈസിലെ ഏതെങ്കിലും വെബ് ബ്രൗസറിൽ കണ്ണി തുറക്കുക. രണ്ട് ഡിവൈസുകളിലും Sharik ഉണ്ടെങ്കിൽ, നിങ്ങൾക്ക് സ്വീകർത്താവ് ഫംഗ്ഷൻ ഉപയോഗിക്കാവുന്നതാണ്",
+  "intro4EverywhereTitle": "എല്ലായിടത്തും",
+  "intro4EverywhereDescription": "Sharik എല്ലാ പ്രധാന മൊബൈൽ-ഡെസ്ക്ടോപ്പ് പ്ലാറ്റ്‌ഫോമുകളിലും ലഭ്യമാണ്. അതോടൊപ്പം, അത് സൗജന്യമാണ്, പരസ്യങ്ങളില്ല, കോഡ് ഓൺലൈനിൽ പ്രസിദ്ധീകരിച്ചിട്ടുമുണ്ട്. \nകൂടുതലറിയാൻ ക്ലിക്ക് ചെയ്യുക",
+  "@_ABOUT_PAGE": {},
+  "aboutInstalledVersion": "ഇൻസ്റ്റാൾ ചെയ്തിരിക്കുന്ന പതിപ്പ്",
+  "aboutLatestVersion": "എറ്റവും പുതിയ പതിപ്പ്",
+  "aboutLatestVersionUnknown": "അറിയപ്പെടാത്തവ",
+  "aboutCheckForUpdates": "അപ്ഡേറ്റുകൾക്കായി പരിശോധിക്കുക",
+  "aboutUpdate": "അപ്ഡേറ്റ്",
+  "aboutNoUpdates": "അപ്‌ഡേറ്റുകളൊന്നുമില്ല",
+  "aboutOpenSourceLicenses": "ഓപ്പൺ സോഴ്‌സ് ലൈസൻസുകൾ",
+  "aboutTrackingPolicy": "ട്രാക്കിംഗ് നയങ്ങൾ",
+  "aboutContributors": "സംഭാവകർ",
+  "aboutSharikText": "Sharik പൂർണ്ണമായും സൗജന്യവും അതിൻ്റെ കോഡ് ഗിറ്റ്ഹബ്ബിൽ പ്രസിദ്ധീകരിച്ചിട്ടുമുണ്ട്.\nപങ്കാളിയാവാൻ ഏവർക്കും സ്വാഗതം :>",
+  "aboutChangelog": "മാറ്റങ്ങൾ",
+  "aboutLicenses": "ലൈസൻസുകൾ",
+  "aboutPrivacyPolicy": "സ്വകാര്യതാനയം",
+  "@_SHARING_PAGE": {},
+  "sharingReceiver": "സ്വീകർത്താവ്",
+  "sharingNetworkInterfaces": "നെറ്റ്‌വർക്ക് ഇന്റർഫേസുകൾ",
+  "sharingSelectNetworkInterface": "നെറ്റ്‌വർക്ക് ഇന്റർഫേസ് തിരഞ്ഞെടുക്കുക",
+  "sharingCopiedToClipboard": "ക്ലിപ്പ്ബോർഡിലേക്ക് പകർത്തി",
+  "sharingRecipientNeedsToBeConnected": "സ്വീകരിക്കുന്നയാൾ ഒരേ ശൃംഖലയിലേക്ക് \nബന്ധപ്പെട്ടിരിക്കണം",
+  "sharingOpenInBrowser": "ഇനി ഈ കണ്ണി ഏതെങ്കിലും\nബ്രൗസറിൽ തുറക്കുക",
+  "sharingConnectToWiFiOrHotspot": "ഒരു വൈ-ഫൈയിലേക്ക് ബന്ധിപ്പിക്കുക അല്ലെങ്കിൽ ഒരു മൊബൈൽ ഹോട്ട്സ്പോട്ട് സെറ്റ് ചെയ്യുക",
   "fontAndika": "Manjari",
-  "fontComfortaa": "Gayathri"
+  "fontComfortaa": "Chilanka"
 }
