--- a/locales/ru.arb
+++ b/locales/ru.arb
@@ -1,25 +1,57 @@
 {
   "@@locale": "ru",
-  "homeSelectFile": "Select file ru",
-  "homeSelectApp": "App",
-  "homeSelectText": "Text",
-  "homeSelectGallery": "Gallery",
-  "homeSelectTextTypeSomeText": "Type some text",
-  "homeLatest": "Latest",
-  "homeReceiver": "Receiver",
-  "homeUpdates": "Updates",
-  "homeUpdatesTheLatestVersionIsInstalled": "The latest version is already installed",
-  "homeUpdatesCurrentVersion": "Current version",
-  "homeUpdatesLatestVersion": "Latest version",
-  "homeUpdatesChangelog": "Changelog",
-  "selectAppSearch": "Search",
-  "selectAppHideSystem": "Hide system apps",
-  "selectAppHideNonLaunch": "Hide non-launchable apps",
-  "introGeneralDone": "DONE",
-  "introGeneralNext": "NEXT",
-  "generalClose": "Close",
-  "generalSend": "Send",
-
+  "homeSelectFile": "Выбрать файл",
+  "homeSelectApp": "Приложение",
+  "homeSelectText": "Текст",
+  "homeSelectGallery": "Галерея",
+  "homeSelectTextTypeSomeText": "Введите текст",
+  "homeHistory": "История",
+  "homeReceiver": "Приемник",
+  "homeUpdates": "Обновления",
+  "homeUpdatesTheLatestVersionIsInstalled": "Последняя версия уже установлена",
+  "homeUpdatesCurrentVersion": "Текущая версия",
+  "homeUpdatesLatestVersion": "Последняя версия",
+  "homeUpdatesChangelog": "История изменений",
+  "selectAppSearch": "Поиск",
+  "selectAppHideSystem": "Скрыть системные приложения",
+  "selectAppHideNonLaunch": "Скрыть служебные приложения",
+  "introGeneralDone": "ГОТОВО",
+  "introGeneralNext": "ДАЛЕЕ",
+  "generalClose": "Закрыть",
+  "generalSend": "Отправить",
+  "generalOpenInGithub": "Открыть в GitHub",
+  "generalLoading": "Загрузка",
+  "@_INTRO_PAGE": {},
+  "intro1ConnectTitle": "ПОДКЛЮЧИ",
+  "intro1ConnectDescription": "Подключите устройства к одной и той же сети Wi-Fi. Вы также можете использовать Мобильную Точку Доступа",
+  "intro2SendTitle": "ОТПРАВЬ",
+  "intro2SendDescription": "Вы можете делиться изображениями, видео, файлами и текстом",
+  "intro3ReceiveTitle": "ПОЛУЧИ",
+  "intro3ReceiveDescription": "Откройте ссылку на другом устройстве в любом веб-браузере. Если Sharik установлен на обоих устройствах, вы также можете использовать функцию Приемника",
+  "intro4EverywhereTitle": "ВЕЗДЕ",
+  "intro4EverywhereDescription": "Шарик доступен для всех основных мобильных и настольных платформ. Кроме того, он является бесплатным, он не имеет рекламы, и его код опубликован онлайн.\nНажмите здесь, чтобы узнать больше",
+  "@_ABOUT_PAGE": {},
+  "aboutInstalledVersion": "Текущая версия",
+  "aboutLatestVersion": "Последняя версия",
+  "aboutLatestVersionUnknown": "неизвестно",
+  "aboutCheckForUpdates": "Проверить обновления",
+  "aboutUpdate": "Обновления",
+  "aboutNoUpdates": "Обновлений нет",
+  "aboutOpenSourceLicenses": "Лицензии открытого ПО",
+  "aboutTrackingPolicy": "Политика отслеживания",
+  "aboutContributors": "Соавторы",
+  "aboutSharikText": "Sharik полностью бесплатен со своим кодом, опубликованным на GitHub.\nКаждый приветствуется внести свой вклад :>",
+  "aboutChangelog": "История изменений",
+  "aboutLicenses": "Лицензии",
+  "aboutPrivacyPolicy": "Политика конфиденциальности",
+  "@_SHARING_PAGE": {},
+  "sharingReceiver": "Приемник",
+  "sharingNetworkInterfaces": "Сетевые интерфейсы",
+  "sharingSelectNetworkInterface": "Выберите сетевой интерфейс",
+  "sharingCopiedToClipboard": "Скопировано в буфер обмена",
+  "sharingRecipientNeedsToBeConnected": "Получатель должен быть подключен\nк той же сети",
+  "sharingOpenInBrowser": "Теперь откройте эту ссылку\nв любом браузере",
+  "sharingConnectToWiFiOrHotspot": "Подключитесь к Wi-Fi или установите Мобильную Точку Доступа",
   "fontAndika": "Andika",
   "fontComfortaa": "Comfortaa"
 }
