--- a/locales/uk.arb
+++ b/locales/uk.arb
@@ -1,25 +1,57 @@
 {
   "@@locale": "uk",
-  "homeSelectFile": "Select file ua",
-  "homeSelectApp": "App",
-  "homeSelectText": "Text",
-  "homeSelectGallery": "Gallery",
-  "homeSelectTextTypeSomeText": "Type some text",
-  "homeLatest": "Latest",
-  "homeReceiver": "Receiver",
-  "homeUpdates": "Updates",
-  "homeUpdatesTheLatestVersionIsInstalled": "The latest version is already installed",
-  "homeUpdatesCurrentVersion": "Current version",
-  "homeUpdatesLatestVersion": "Latest version",
-  "homeUpdatesChangelog": "Changelog",
-  "selectAppSearch": "Search",
-  "selectAppHideSystem": "Hide system apps",
-  "selectAppHideNonLaunch": "Hide non-launchable apps",
-  "introGeneralDone": "DONE",
-  "introGeneralNext": "NEXT",
-  "generalClose": "Close",
-  "generalSend": "Send",
-
+  "homeSelectFile": "Вибрати файл",
+  "homeSelectApp": "Додаток",
+  "homeSelectText": "Текст",
+  "homeSelectGallery": "Галерея",
+  "homeSelectTextTypeSomeText": "Введіть текст",
+  "homeHistory": "Історія",
+  "homeReceiver": "Приймач",
+  "homeUpdates": "Оновлення",
+  "homeUpdatesTheLatestVersionIsInstalled": "Найновіша версія вже встановлена",
+  "homeUpdatesCurrentVersion": "Поточна версія",
+  "homeUpdatesLatestVersion": "Остання версія",
+  "homeUpdatesChangelog": "Журнал змін",
+  "selectAppSearch": "Пошук",
+  "selectAppHideSystem": "Приховати системні додатки",
+  "selectAppHideNonLaunch": "Приховати службові програми",
+  "introGeneralDone": "ГОТОВО",
+  "introGeneralNext": "ДАЛІ",
+  "generalClose": "Закрити",
+  "generalSend": "Відправити",
+  "generalOpenInGithub": "Переглянути на GitHub",
+  "generalLoading": "Завантаження",
+  "@_INTRO_PAGE": {},
+  "intro1ConnectTitle": "З'ЄДНАЙ",
+  "intro1ConnectDescription": "Під'єднайте пристрої до однієї Wi-Fi мережі. Також ви можете використовувати Мобільну Точку Доступу",
+  "intro2SendTitle": "ВІДПРАВ",
+  "intro2SendDescription": "Ви можете ділитися картинками, відео, файлами та текстом",
+  "intro3ReceiveTitle": "ОТРИМАЙ",
+  "intro3ReceiveDescription": "Відкрийте посилання на іншому пристрої в будь-якому веб-переглядачі. Якщо Sharik присутній на обох пристроях, ви також можете використати функцію \"Приймач\"",
+  "intro4EverywhereTitle": "БУДЬ-ДЕ",
+  "intro4EverywhereDescription": "Sharik доступний для всіх мобільних і настільних платформ. Також, він безкоштовний, у ньому немає реклами, а його код опублікований в Інтернеті.\nНатисніть тут, щоб дізнатися більше",
+  "@_ABOUT_PAGE": {},
+  "aboutInstalledVersion": "Встановлена версія",
+  "aboutLatestVersion": "Остання версія",
+  "aboutLatestVersionUnknown": "невідомо",
+  "aboutCheckForUpdates": "Перевірити оновлення",
+  "aboutUpdate": "Оновити",
+  "aboutNoUpdates": "Оновлень немає",
+  "aboutOpenSourceLicenses": "Ліцензії ПЗ з відкритим кодом",
+  "aboutTrackingPolicy": "Політика відстеження",
+  "aboutContributors": "Співавтори",
+  "aboutSharikText": "Sharik цілком безкоштовний, із кодом опублікованим на GitHub.\nКожен запрошується зробити свій внесок :>",
+  "aboutChangelog": "Журнал змін",
+  "aboutLicenses": "Ліцензії",
+  "aboutPrivacyPolicy": "Політика конфіденційності",
+  "@_SHARING_PAGE": {},
+  "sharingReceiver": "Приймач",
+  "sharingNetworkInterfaces": "Мережеві інтерфейси",
+  "sharingSelectNetworkInterface": "Вибрати інтерфейс",
+  "sharingCopiedToClipboard": "Скопійовано до буфера обміну",
+  "sharingRecipientNeedsToBeConnected": "Приймач повинен бути під'єднаним\nдо тієї ж мережі",
+  "sharingOpenInBrowser": "Тепер відкрийте це посилання\nв будь-якому браузері",
+  "sharingConnectToWiFiOrHotspot": "Підключіться до Wi-Fi або налаштуйте Точку Доступу",
   "fontAndika": "Andika",
   "fontComfortaa": "Comfortaa"
 }
