--- a/locales/pl.arb
+++ b/locales/pl.arb
@@ -1,25 +1,57 @@
 {
   "@@locale": "pl",
-  "homeSelectFile": "Select file pl",
-  "homeSelectApp": "App",
-  "homeSelectText": "Text",
-  "homeSelectGallery": "Gallery",
-  "homeSelectTextTypeSomeText": "Type some text",
-  "homeLatest": "Latest",
-  "homeReceiver": "Receiver",
-  "homeUpdates": "Updates",
-  "homeUpdatesTheLatestVersionIsInstalled": "The latest version is already installed",
-  "homeUpdatesCurrentVersion": "Current version",
-  "homeUpdatesLatestVersion": "Latest version",
-  "homeUpdatesChangelog": "Changelog",
-  "selectAppSearch": "Search",
-  "selectAppHideSystem": "Hide system apps",
-  "selectAppHideNonLaunch": "Hide non-launchable apps",
-  "introGeneralDone": "DONE",
-  "introGeneralNext": "NEXT",
-  "generalClose": "Close",
-  "generalSend": "Send",
-
+  "homeSelectFile": "Wybierz plik",
+  "homeSelectApp": "Aplikacja",
+  "homeSelectText": "Tekst",
+  "homeSelectGallery": "Galeria",
+  "homeSelectTextTypeSomeText": "Wprowadź tekst",
+  "homeHistory": "Historia",
+  "homeReceiver": "Odbiorca",
+  "homeUpdates": "Aktualizacje",
+  "homeUpdatesTheLatestVersionIsInstalled": "Posiadasz najnowszą wersję",
+  "homeUpdatesCurrentVersion": "Bieżąca wersja",
+  "homeUpdatesLatestVersion": "Najnowsza wersja",
+  "homeUpdatesChangelog": "Historia zmian",
+  "selectAppSearch": "Szukaj",
+  "selectAppHideSystem": "Ukryj aplikacje systemowe",
+  "selectAppHideNonLaunch": "Ukryj nieuruchamialne aplikacje",
+  "introGeneralDone": "GOTOWE",
+  "introGeneralNext": "DALEJ",
+  "generalClose": "Zamknij",
+  "generalSend": "Wyślij",
+  "generalOpenInGithub": "Otwórz w GitHub",
+  "generalLoading": "Wczytywanie",
+  "@_INTRO_PAGE": {},
+  "intro1ConnectTitle": "ŁĄCZENIE",
+  "intro1ConnectDescription": "Połącz urządzenia do tej samej sieci Wi-Fi. Możesz również skonfigurować mobilny hotspot",
+  "intro2SendTitle": "WYSYŁANIE",
+  "intro2SendDescription": "Możesz udostępniać obrazy, filmy, pliki oraz tekst",
+  "intro3ReceiveTitle": "ODBIERANIE",
+  "intro3ReceiveDescription": "Otwórz odnośnik na innym urządzeniu w dowolnej przeglądarce internetowej. Jeśli posiadasz Sharik na obu urządzeniach, możesz użyć funkcji odbierania",
+  "intro4EverywhereTitle": "GDZIEKOLWIEK",
+  "intro4EverywhereDescription": "Sharik jest dostępny na wszystkich popularnych platformach mobilnych oraz komputerowych. Oprócz tego, jest darmowy i nie zawiera reklam, a jego kod źródłowy jest opublikowany w sieci.\nKliknij tutaj, aby dowiedzieć się więcej",
+  "@_ABOUT_PAGE": {},
+  "aboutInstalledVersion": "Zainstalowana wersja",
+  "aboutLatestVersion": "Najnowsza wersja",
+  "aboutLatestVersionUnknown": "nieznane",
+  "aboutCheckForUpdates": "Sprawdź aktualizacje",
+  "aboutUpdate": "Aktualizacja",
+  "aboutNoUpdates": "Brak aktualizacji",
+  "aboutOpenSourceLicenses": "Licencje Open Source",
+  "aboutTrackingPolicy": "Polityka śledzenia",
+  "aboutContributors": "Współtwórcy",
+  "aboutSharikText": "Sharik jest całkowicie darmowy, a jego kod źródłowy jest opublikowany na GitHub.\nZachęcamy każdego do udzielenia się :>",
+  "aboutChangelog": "Historia zmian",
+  "aboutLicenses": "Licencje",
+  "aboutPrivacyPolicy": "Polityka prywatności",
+  "@_SHARING_PAGE": {},
+  "sharingReceiver": "Odbiorca",
+  "sharingNetworkInterfaces": "Interfejsy sieciowe",
+  "sharingSelectNetworkInterface": "Wybierz interfejs sieciowy",
+  "sharingCopiedToClipboard": "Skopiowano do schowka",
+  "sharingRecipientNeedsToBeConnected": "Odbiorca musi być połączony\nz tą samą siecią",
+  "sharingOpenInBrowser": "Teraz otwórz ten odnośnik\nw dowolnej przeglądarce",
+  "sharingConnectToWiFiOrHotspot": "Połącz z Wi-Fi lub skonfiguruj mobilny hotspot",
   "fontAndika": "Andika",
   "fontComfortaa": "Comfortaa"
 }
