UI changes: Receiver was moved from the bottom bar to the top of the home page (Closes #82)

--- a/locales/en.arb
+++ b/locales/en.arb
@@ -59,5 +59,9 @@
 
 
   "fontAndika": "Andika",
-  "fontComfortaa": "Comfortaa"
+  "fontComfortaa": "Comfortaa",
+
+  "homeSend": "Send",
+  "homeReceive": "Receive",
+  "homeFiles": "Files"
 }
