Added localization for the multiple files sharing page

--- a/locales/en.arb
+++ b/locales/en.arb
@@ -63,5 +63,7 @@
 
   "homeSend": "Send",
   "homeReceive": "Receive",
-  "homeFiles": "Files"
+  "homeFiles": "Files",
+
+  "shareDownloadAllButton": "Download all (Will skip folders, Requires JavaScript enabled)"
 }
